revert plot layout to ggplot2 default

--- a/README.Rmd
+++ b/README.Rmd
@@ -107,9 +107,8 @@ ggplot() +
   geom_point(data = data %>% unnest(data) %>% filter(., Label != "Control"),
              mapping = aes(x = Time_s, y = NADH), size = 0.1) +
   geom_path(data = data %>% unnest(augment) %>% filter(., Label != "Control"),
-            mapping = aes(x = Time_s, y = .fitted, group = Exp_ID), colour = "green") +
-  facet_grid(Label ~ Protein) +
-  theme_classic()
+            mapping = aes(x = Time_s, y = .fitted, group = Exp_ID), colour = "blue") +
+  facet_grid(Label ~ Protein)
 ```
 
 
@@ -117,7 +116,5 @@ ggplot() +
 ggplot() +
   geom_boxplot(data = params$data %>% filter(Label != "Control"), aes(x = Label, y = turnover, colour = Protein)) +
   geom_point(data = params$data %>% filter(Label != "Control"), aes(x = Label, y = turnover, colour = Protein)) +
-  facet_grid(. ~ Protein) +
-  ggsci::scale_color_npg() +
-  theme_classic()
+  facet_grid(. ~ Protein)
 ```
